Correctly link Join Today button in Navbar to newMagician page; fix spacing.  #105  Remove floating old ShowEmail import #104

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,7 @@ nav form.dropdown-menu.login {
 }
 nav .join {
   margin-right: 10px;
+  margin-left: 10px;
 }
 nav a.navbar-brand {
   padding: 0 10px 0 0;
